fix: Focus outline; Contrast; Console output
* Ensure focus outline doesn't overlap in Firefox on Ubuntu.
* Improve contrast ratios betwixt menu colours.
* Remove spurious leading '\n' from console output.

--- a/03-menu/menu-sdl.css
+++ b/03-menu/menu-sdl.css
@@ -3,7 +3,11 @@
 }
 
 *:focus {
-	outline: 4px solid #007e00;
+	outline: 0.25em solid #007e00;
+}
+
+button {
+	margin: 0.25em;
 }
 
 #side-by-side {
